--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome</h1>
-
+    <a href="/files">View files</a>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <h2>Upload a file: </h2>
         <input type="file" name="file" />
@@ -19,5 +19,6 @@
         <input type="text" name="folderName" placeholder="Folder Name" required />
         <button type="submit">Create Folder</button>
     </form>
+
 </body>
 </html>
